--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -36,7 +36,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -53,7 +55,7 @@
     "import unicodedata\n",
     "\n",
     "#Part 3\n",
-    "from nltk.corpus import stopwords #Part 3\n",
+    "from nltk.corpus import stopwords\n",
     "from nltk.stem.snowball import SnowballStemmer"
    ]
   },
@@ -82,7 +84,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Our second dataset, however, was retrieved from the cluster. We first tried to retrieve the whole dataset but quickly realized it would be impossible to do so (it was very heavy and took a long time to be downloaded). Thus, we only extracted the first JSON file to perform our analysis. To do this, we used the following methods:\n",
+    "Our second dataset (_**Spinn3r**_), however, was retrieved from the cluster. We first tried to retrieve the whole dataset but quickly realized it would be impossible to do so (it was very heavy and took a long time to be downloaded). Thus, we only extracted the first JSON file to perform our analysis. To do this, we used the following methods:\n",
     "\n",
     "```bash\n",
     "cluster$ hadoop fs -getmerge /datasets/swiss-tweet/harvest3r_twitter_data_01-01_0.json /buffer/example.json\n",
@@ -182,7 +184,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
@@ -225,7 +229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#columns we care about\n",
@@ -253,7 +259,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df['lang'].value_counts()"
@@ -276,7 +284,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df['author_gender'].value_counts()"
@@ -299,7 +309,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df['sentiment'].value_counts()"
@@ -324,7 +336,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df['source_spam_probability'].value_counts()"
@@ -340,7 +354,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "#we only look at the locations for the languages we care about, as location seems to be language dependent\n",
@@ -368,7 +384,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df.count() #give us number of NAN"
@@ -387,7 +405,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df[~(twitter_df.sentiment.isin(['POSITIVE', 'NEGATIVE', 'NEUTRAL']))]['lang'].value_counts()"
@@ -405,7 +425,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', -1)\n",
@@ -425,6 +447,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -444,7 +467,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', 100)\n",
@@ -470,7 +495,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main'] #adds instead of personal reference\n",
@@ -488,7 +515,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'RT ' in x) ]['main'].head()"
@@ -535,7 +564,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "cleaned = json_normalize(data)\n",
@@ -559,7 +590,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "#Only keeping the necessary columns\n",
@@ -593,10 +626,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
-    "lang_mask = ~cleaned.lang.isin('de', 'en', 'fr')\n",
+    "lang_mask = ~cleaned.lang.isin(['de', 'en', 'fr'])\n",
     "cleaned.drop(cleaned[lang_mask].index, inplace=True)\n",
     "cleaned.reset_index(drop=True, inplace=True)"
    ]
@@ -620,7 +655,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "sent_mask = (cleaned['sentiment'] == 'POSITIVE')\n",
@@ -647,7 +684,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "spam_mask = (cleaned['source_spam_probability'] >= 0.5)\n",
@@ -672,7 +711,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "cleaned['published'] = pd.to_datetime(cleaned['published'])\n",
@@ -698,7 +739,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "cleaned['main'] = cleaned['main'].astype(str).str.lower().\\\n",
@@ -719,7 +762,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "cleaned['main'] = cleaned['main'].str.replace(\"www\\S+\", '').str.replace(\"http\\S+\", '').\\\n",
@@ -744,25 +789,6 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def process_words(language):\n",
-    "    lang = language[:2]\n",
-    "    if language == 'german':\n",
-    "        lang = 'de'\n",
-    "    \n",
-    "    stemmer = SnowballStemmer(language)\n",
-    "    lang_set = stopwords.words(language)\n",
-    "        \n",
-    "    cleaned.loc[cleaned['lang'] == lang, 'main'] = cleaned.loc[cleaned['lang'] == lang, 'main'].str.split().\\\n",
-    "        apply(lambda tweet: [word for word in tweet if word not in lang_set]).\\\n",
-    "        apply(lambda tweet: [stemmer.stem(word) for word in tweet])"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -779,7 +805,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "cleaned['main'] = cleaned['main'].str.split()\n",
@@ -803,7 +831,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def remove_stops(language):\n",
@@ -820,7 +850,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "remove_stops('english')\n",
@@ -846,11 +878,11 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
-    "from nltk.stem.snowball import SnowballStemmer\n",
-    "\n",
     "def stem_words(language):\n",
     "    lang = language[:2]\n",
     "    if language == 'german':\n",
@@ -865,7 +897,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": false
+   },
    "outputs": [],
    "source": [
     "stem_words('english')\n",
@@ -892,7 +926,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "####  Building the Dictionary"
+    "####  Building the dictionary"
    ]
   },
   {
@@ -905,10 +939,201 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false,
+    "scrolled": true
+   },
+   "outputs": [],
+   "source": [
+    "DICT_PATH = \"dictionary.csv\"\n",
+    "dictionaries = pd.read_csv(DICT_PATH)\n",
+    "dictionaries.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "en_dict = dictionaries['english'].dropna()\n",
+    "fr_dict = dictionaries['french'].dropna()\n",
+    "de_dict = pd.concat([dictionaries['german'].dropna(), dictionaries['swiss_german'].dropna()])"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "#### processing the dictionary"
+    "After fetching our 3 datasets, we clean them as we did for the tweets in _Part 2_. However, as we created them ourselves, we only have to lowercase them and treat the special characters. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dict_cleaning(lang):\n",
+    "    lang_dict = eval(lang + '_dict')\n",
+    "    lang_dict = lang_dict.astype(str).str.lower().\\\n",
+    "                        apply(lambda expression: unicodedata.normalize('NFD', expression).\\\n",
+    "                        encode('ascii', 'ignore').decode('utf-8'))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": false
+   },
+   "outputs": [],
+   "source": [
+    "dict_cleaning('en')\n",
+    "dict_cleaning('fr')\n",
+    "dict_cleaning('de')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Processing the dictionary"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Once we have our (clean) data, we simply run all the previous NLP methods on our dictionaries. \n",
+    "\n",
+    "_Note: As all methods were explained above, we will not dwell on each step._"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Tokenizing\n",
+    "en_dict = en_dict.str.split()\n",
+    "fr_dict = fr_dict.str.split()\n",
+    "de_dict = de_dict.str.split()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dict_remove_stops(language):\n",
+    "    lang = language[:2]\n",
+    "    if language == 'german':\n",
+    "        lang = 'de'\n",
+    "    \n",
+    "    lang_dict = eval(lang + '_dict')\n",
+    "    lang_set = stopwords.words(language)\n",
+    "        \n",
+    "    lang_dict = lang_dict.apply(lambda expression: [word for word in expression if word not in lang_set])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Removing stop words\n",
+    "dict_remove_stops('english')\n",
+    "dict_remove_stops('french')\n",
+    "dict_remove_stops('german')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "def dict_stem_words(language):\n",
+    "    lang = language[:2]\n",
+    "    if language == 'german':\n",
+    "        lang = 'de'\n",
+    "    \n",
+    "    lang_dict = eval(lang + '_dict')\n",
+    "    stemmer = SnowballStemmer(language)\n",
+    "        \n",
+    "    lang_dict = lang_dict.apply(lambda expression: [stemmer.stem(word) for word in expression])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "#Stemming the words\n",
+    "dict_stem_words('en')\n",
+    "dict_stem_words('fr')\n",
+    "dict_stem_words('de')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To show the soundness of our method, we display the head of each dictionary:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "en_dict.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "fr_dict.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "ge_dict.head()"
    ]
   },
   {
@@ -1068,7 +1293,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.6.1"
+   "version": "3.5.2"
   }
  },
  "nbformat": 4,
