--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -11,19 +11,21 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this notebook we describe our pipeline and work done on the twitter datset to answer our research question(s).\n",
-    "\n",
-    "Overview:\n",
-    "0. **Dataretrival:** how we access the dataset\n",
-    "1. **Dataset selection and analysis:** a first look at the dataset, exploring potential issues\n",
-    "2. **Dataset cleaning:** cleaning based on the results found in 1\n",
+    "In this notebook, we describe the multiple steps of our preprocessing pipeline and the work done on the twitter dataset to answer our research question."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Overview:\n",
+    "0. **Data Retrival:** how we access the dataset\n",
+    "1. **Dataset Selection and Analysis:** a first look at the dataset, exploring potential issues\n",
+    "2. **Dataset Cleaning:** cleaning based on the results found in _Part 1_\n",
     "3. **NLP methods:** applying NLP methods to our data to retrieve relevant data\n",
-    "4. **Machine Learning:** using machine learning to further clean\n",
-    "5. **Analysis:** analysis preformed on our cleaned dataset\n",
-    "6. **Conclusion**\n",
-    "\n",
-    "\n",
-    "An implemention cleaning the data on spark can be found in run.py"
+    "4. **Machine Learning:** using Machine Learning to further clean our dataset\n",
+    "5. **Analysis:** trying to find meaning in the final dataset we retrieve\n",
+    "6. **Conclusion**"
    ]
   },
   {
@@ -63,7 +65,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 0. Datasets retrieval"
+    "## 0. Datasets Retrieval"
    ]
   },
   {
@@ -96,7 +98,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 1. Dataset selection & analysis"
+    "## 1. Dataset Selection & Analysis"
    ]
   },
   {
@@ -1148,6 +1150,13 @@
    "metadata": {},
    "source": [
     "### 3.5 Processing the Data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In this part, we cross the dataset with our dictionaries to retrieve the tweets exhibiting mental distress. This is the first (less naive) step of our analysis before running the Machine Learning algorithms on our data."
    ]
   },
   {
