--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -536,17 +536,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 2. Datset Cleaning"
+    "## 2. Dataset Cleaning"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have done some data exploration, we have to clean the data to be able to use it correctly for the rest of the project.\n",
+    "Now that we have done some data exploration, we have to clean our dataset to be able to use it correctly for our research.\n",
     "\n",
-    "First, we use Pandas on a small subset of the dataset and locally, so as to be able to make sure all functions work as expected and to test them out. Later on, we use spark to be able to do the same operations on a bigger scale.\n",
-    "The spark version of this code can be found in [run.py](run.py)"
+    "First, we use Pandas locally on a small subset of the tweets to explore different cleaning methods and make sure the functions we chose work as expected. After proving that our concept works, we use Spark to scale up our operations and be able to perform them on the 320 files provided on the cluster.\n",
+    "\n",
+    "_Note: The Spark version of this code can be found in the [run.py](run.py) file._"
    ]
   },
   {
@@ -560,7 +561,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As mentioned in 1, the dataset is given in nested json format, we thus have to unnest it."
+    "As mentioned in _Part 1_, the provided dataset uses a nested json format. Thus, to be able to work with it, we need to unnest it using the _normalize_ function.\n",
+    "\n",
+    "_Note: we normalize the **data** DF as we use it in **Part 1** to import our datasets._"
    ]
   },
   {
@@ -586,18 +589,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Once we have a Dataframe, we choose the columns we think will be useful for the rest of the proejct, as described in 1. Thus, we select the columns we previously found to be useful."
+    "Once we have a functional Dataframe, we choose the useful columns determined above."
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": true
+    "collapsed": false
    },
    "outputs": [],
    "source": [
-    "#Only keeping the necessary columns\n",
     "cleaned = cleaned[['main', 'published', 'source_spam_probability', 'source_location', 'tags', 'lang', 'sentiment',\n",
     "                   'author_gender', 'source_followers', 'source_following']]"
    ]
@@ -606,7 +608,9 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Some of them will bring us interesting insights. For example: are men or women more prone to depression? Is someone with more followers happy? There are quite a few interesting questions that can thus be asked and later on answered with the information we choose to keep."
+    "As mentionned in _Part 1_, we chose this columns for the possible insights they can give us. Some of the question we want to answer in our research are:\n",
+    "- _Are men or women more prone to depression?_ \n",
+    "- _Is someone with more followers happy?_"
    ]
   },
   {
@@ -620,9 +624,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seeing as our project is mainly focused on Switzerland, we will make sure we only keep the tweets that are in languages spoken by the majority of Switzerland, which would mean French, German and Italian. Unfortunatley, as no one in the group speaks Italian, we decided to forfeit the language in favor of English. This has two reasons: first, a lot of people speak English on the Internet, as it is a global language; second, there is a large English-speaking community in Switzerland.\n",
+    "The dataset provided contains tweets in a lot of languages. However, as our project is focused on the Swiss Population, we only keep tweets written in one of the official Swiss languages (i.e. French, German and Italian).\n",
     "\n",
-    "Additionaly, note that Swiss German is counted in the German part, even if some of the words are a little bit more peculiar. This will be taken into account in our dictionnaries later on."
+    "However, we had 2 hurdles (pushing us to do slight changes):\n",
+    "- Nobody in the group is Italian-Speaking\n",
+    "- Most of the tweets are written in English _(this is due to the large English-Speaking community in Switzerland but also due to the fact English is a _de-facto_ choice when communicating through the Internet)_\n",
+    "\n",
+    "Moreover, we should not forget the existence of Swiss-German dialects which also complicates the task at hand."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To work our way through these problems, we decided to keep 3 languages: English, French and German. Note that we mean \"German\" in an extended manner as we also include Swiss-German dialects in the lot (this will be taken into account when creating our dictionaries as some words slightly change between the two)."
    ]
   },
   {
@@ -649,9 +664,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Seeing as we were provided with a dataset that has a sentiment analysis, we use it to be able to drop all tweets that have a **positive** result. Seeing as we want to find depression and other mental illnesses, we are mostly searching for negative or neutral tweets. \n",
-    "\n",
-    "It could be that the sentiment analysis does have a few false positives (for example, the use of a smiling face could be used saracastically and thus making the result of the analysis be positive), but we decide to use the data as it is, since we are interessted in an overview."
+    "As we use a dataset with sentiment labeling, we use this opportunity to drop all tweets marked as **POSITIVE** given the nature of our subject (we are looking for signs of mental distress). "
    ]
   },
   {
@@ -671,6 +684,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "As this labeling is largely based on emojis, we expect some false positives in the **POSITIVE** category. However, it is too difficult to consider the sarcastic use of the _:)_ emoji (text analysis is not refined enough yet to detect such subtleties). Thus, we knowingly choose this method as we are only interested in having an overview of tweets showcasing signs of mental illnesses and not listing all of them."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2.5 Spam Removal"
    ]
   },
@@ -678,9 +698,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Spam is not relevant to any of our objectives, thus, we decide to drop all the tweets having a greater value than 0.5 in the **source_spam_probability** column. Once again, we decide to trust the algorithm giving us this data.\n",
-    "\n",
-    "We chose a 50% threshold as it follows the maximum likelihood rule: it is likely to be spam if it has more than 50% chance to be spam."
+    "Spam is not relevant to any of our objectives. Thus, we decide to drop all tweets having a probability of being a spam greater value than 0.5 (given in the **source_spam_probability** field). Once again, we decide to trust the system that treated the data."
    ]
   },
   {
@@ -700,6 +718,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "_Note: our choice to have a 50% threshold follows the maximum likelihood rule and was considered to be a sufficiently robust value._"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "### 2.6 Time Format Encoding"
    ]
   },
@@ -707,7 +732,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "To be able to use the time in some analysis (to find seasonal patterns in depression for example), we also need the dates to be properly formatted. Thus, we decided to reformat all the dates in the column **published** to be certain to be able to use them later on."
+    "To be able to use the time in our analysis (especially to find seasonal patterns in depression), we need the dates to be properly formatted."
    ]
   },
   {
@@ -719,7 +744,7 @@
    "outputs": [],
    "source": [
     "cleaned['published'] = pd.to_datetime(cleaned['published'])\n",
-    "cleaned['published'].head(10)"
+    "cleaned['published'].head()"
    ]
   },
   {
@@ -733,9 +758,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Now that we have only the tweets that interest us remaining, we need to do a little bit of cleaning in the **main** column. Indeed, to be able to process the text and find patterns or any other information that we could seek.\n",
-    "\n",
-    "First we put everything in lowercase to be able to make comapraisons between words without having problems with different representation between the same letter in uppercase and lowercase."
+    "Now that we only have relevant tweets (following a mild cleaning), we need to work on the main subject of our analysis: the content of the tweets itself. This is necessary to ease the _Part 3_ of our research allowing us to process the text and find patterns: Natural Language Processing."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The first step of our treatment is to transform all the caracters to lowercase to be able to compare tweets easily without being bothered with case-sensitive searches. Following the same idea, we get rid of all the special characters complicating our task."
    ]
   },
   {
@@ -756,9 +786,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Then, we remove all URLs and images. As we do not have any image processing, the pictures are not useful. As for the links, some information might be relevant (for example the title of an article if it is to be found in the URL) but most of it isn't.\n",
-    "\n",
-    "We also remove all non-alphanumeric characters, as they are will not give more information and might get in the way of the text analysis."
+    "As we have seen in _Part 1_, URLs are highly linked to spam (except for URLs linking to pictures). As we image processing is not in the scope of this project, we remove all \"pic.twitter\" URLS. After that, we take out all tweets containing a URL format."
    ]
   },
   {
@@ -769,8 +797,10 @@
    },
    "outputs": [],
    "source": [
-    "cleaned['main'] = cleaned['main'].str.replace(\"www\\S+\", '').str.replace(\"http\\S+\", '').\\\n",
-    "                    str.replace(\"pic.twitter\\S+\", '').str.replace('[^\\w\\s]', '')\n",
+    "url_mask = ~cleaned['main'].str.contains(\"www\\S+\", '').str.contains(\"http\\S+\", '')\n",
+    "cleaned['main'] = cleaned['main'].str.replace(\"pic.twitter\\S+\", '')\n",
+    "cleaned.drop(cleaned[url_mask].index, inplace=True)\n",
+    "cleaned.reset_index(drop=True, inplace=True)\n",
     "cleaned['main'].head()"
    ]
   },
@@ -778,7 +808,26 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "After preforming these cleaning steps, the size of the set is significantly reduced, down ro 2.4MB from 55MB."
+    "Finally, we remove all non-alphanumeric characters, as they are will not give more information and might get in the way of the text analysis."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": [
+    "cleaned['main'].str.replace('[^\\w\\s]', '')\n",
+    "cleaned['main'].head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "After performing all these cleaning steps, the size of the set is significantly reduced (the new file only weights 2.4MB instead of the 55MB of the original file)."
    ]
   },
   {
@@ -1165,48 +1214,47 @@
    "source": [
     "## 4. ML (to be done)\n",
     "\n",
-    "The final part of our dataprocessing involves training a supervised machine learning classifier to get better results.\n",
-    "Similar projects routienly use this [2] [3] [8].\n",
+    "The final part of our data processing involves training a supervised Machine Learning classifier to get better results. Similar projects routinely use this [2] [3] [8].\n",
     "\n",
-    "All these methods are implemented in scikit-learn and have an equivalent in spark in case our computers can not handle the size of the data and we need to preform this step on the cluster.\n",
+    "All these methods are implemented in scikit-learn and have an equivalent in Spark in case our computers cannot handle the size of the data, allowing us to perform these steps on the cluster.\n",
     "\n",
-    "In order to do this we need to go through the following steps:"
+    "In order to do this, we go through the following steps:"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.1. labeling the tweets\n",
+    "### 4.1. Labeling the tweets\n",
     "\n",
-    "We need to lable a subset of tweets as 'mentall distressed' or not. Ideally around 6000 per language [7], but due to limited time and manpower, we will limit ourself to 1000 tweets each."
+    "We need to label a subset of tweets as 'mentaly distressed' or not. Ideally around 6000 per language [7], but due to limited time and manpower, we will limit ourself to 1000 tweets each."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.2 construcing features TF-IDF\n",
+    "### 4.2 Construcing features TF-IDF\n",
     "\n",
-    "Once we have the labeled set we transfrom it in order to have features to use for the ML algorithm."
+    "Once we have the labeled set, we transfrom it in order to have features to use for the ML algorithm."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.3 train SVM classifier\n",
+    "### 4.3 Train SVM classifier\n",
     "\n",
-    "According to [7] SVM with tends to preform very well, especially with limited training set size, which is why we will use this. We preform a binary classification on the labeled dataset."
+    "According to [7], SVM along with TF-IDF tends to preform very well, especially with limited training set size (which is ideal in our case). We perform a binary classification on the labeled dataset."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 4.4 relabel training set\n",
+    "### 4.4 Relabel the training set\n",
     "\n",
-    "Using the previously attained classifier we relabled the set, discarding tweets that are labeled to be undistressed"
+    "Using the previously attained classifier, we relabel the set and discard tweets that are labeled as 'undistressed'."
    ]
   },
   {
@@ -1215,69 +1263,69 @@
    "source": [
     "## 5. Final Data Analysis\n",
     "\n",
-    "In the final analysis we try to analyze and visualize the results in order to answer our research questions"
+    "In the final analysis, we try to analyze and visualize the results in order to answer our research questions."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### General analysis\n",
+    "### 5.1 General analysis\n",
     "\n",
-    "Comparining our found set to the general cleaned set and the overall set"
+    "We compare the set found using Machine Learning to the general cleaned set and the overall set."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Finding related indicatior of mental health issues using LDA\n",
+    "### 5.2 Finding related indicatior of mental health issues using LDA\n",
     "\n",
-    "As discussed in [8] one of the best way to find relevant related words in tweets. Again, we plan on using the scikit-learn implemented version of this to preform this."
+    "As discussed in [8], LDA one of the best ways to find relevant related words in tweets. Again, we plan on using the implemented scikit-learn version to preform this."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Gender differences"
+    "### 5.3 Lookint at gender differences"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Tweet frequency and type over time"
+    "### 5.4 Tweet frequency and type over time"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparing our results to census data\n",
+    "### 5.5 Comparing our results to census data\n",
     "\n",
-    "this will be approximative since we could not fine a dataset containing this information."
+    "This will be approximative since we could not find a dataset containing this information."
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### Comparing the languages"
+    "### 5.6 Comparing the languages"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## 6. Conclusions"
+    "## 6. Conclusion"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# References and bibliography"
+    "# References and Bibliography"
    ]
   },
   {
