Adding data processing in case

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -797,8 +797,8 @@
    },
    "outputs": [],
    "source": [
-    "cleaned['main'].str.replace('[^\\w\\s]', '')\n",
-    "cleaned['main'].head()"
+    "cleaned['main'] = cleaned['main'].str.replace(r'[^\\w\\s]', '')\n",
+    "cleaned.main.head()"
    ]
   },
   {
@@ -846,6 +846,7 @@
    },
    "outputs": [],
    "source": [
+    "cleaned['tweets'] = cleaned['main'] #keep tweets for later\n",
     "cleaned['main'] = cleaned['main'].str.split()\n",
     "cleaned.head()"
    ]
@@ -1127,9 +1128,9 @@
    "outputs": [],
    "source": [
     "#Stemming the words\n",
-    "dict_stem_words('en')\n",
-    "dict_stem_words('fr')\n",
-    "dict_stem_words('de')"
+    "dict_stem_words('english')\n",
+    "dict_stem_words('french')\n",
+    "dict_stem_words('german')"
    ]
   },
   {
@@ -1169,7 +1170,7 @@
    },
    "outputs": [],
    "source": [
-    "ge_dict.head()"
+    "de_dict.head()"
    ]
   },
   {
@@ -1183,7 +1184,75 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In this part, we cross the dataset with our dictionaries to retrieve the tweets exhibiting mental distress. This is the first (less naive) step of our analysis before running the Machine Learning algorithms on our data."
+    "In this part, we cross the dataset with our dictionaries to retrieve the tweets exhibiting mental distress. This is the first (less naive) step of our analysis before running the Machine Learning algorithms on our data.\n",
+    "\n",
+    "We first transfrom the lists back to string sentences, for efficacy and code readability:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cleaned.main = cleaned.main.map(lambda x:  ' '.join(x))\n",
+    "de_dict = de_dict.map(lambda x:  ' '.join(x))\n",
+    "en_dict = en_dict.map(lambda x:  ' '.join(x))\n",
+    "fr_dict = fr_dict.map(lambda x:  ' '.join(x))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now check if we can find a dict entry for each tweet"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def check_dict(tweet, dict_):\n",
+    "    \"\"\"checks if dict entry matches tweet\"\"\"\n",
+    "    match = [ w for w in dict_ if w in tweet] #find matching for each entry\n",
+    "    return len(match) > 0 #at least one match"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "For german we now get the following results:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "german_filtered = cleaned[cleaned.lang == 'de']['tweets']\\\n",
+    "[cleaned[cleaned.lang == 'de']['main'].map(lambda x: check_dict(x, de_dict))]\n",
+    "german_filtered.head()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "german_filtered.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Not only do all of this tweets reference the person, but they also talk about sadness or dissapointment.\n",
+    "The remaining number is quite small, compared to the initial 4000 german tweets in the dataset, but it is a number we migth expect."
    ]
   },
   {
@@ -1192,7 +1261,7 @@
    "source": [
     "## 4. ML (to be done)\n",
     "\n",
-    "The final part of our data processing involves training a supervised Machine Learning classifier to get better results. Similar projects routinely use this [2] [3] [8].\n",
+    "The final part of our data processing involves training a supervised Machine Learning classifier to get better results, as missclasifications are still somewhat frequent. Similar projects routinely use this [2] [3] [8].\n",
     "\n",
     "All these methods are implemented in scikit-learn and have an equivalent in Spark in case our computers cannot handle the size of the data, allowing us to perform these steps on the cluster.\n",
     "\n",
@@ -1352,14 +1421,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[7] [Best ways to do Text Classification](http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/)"
+    "[8] [Public health paper using LDA](https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264)"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "[8] [Public health paper using LDA](https://www.aaai.org/ocs/index.php/ICWSM/ICWSM11/paper/viewFile/2880/3264)"
+    "[7] [Best ways to do Text Classification](http://nadbordrozd.github.io/blog/2016/05/20/text-classification-with-word2vec/)"
    ]
   }
  ],
