--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -188,9 +188,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
@@ -259,12 +257,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df['lang'].value_counts()"
+    "plt.figure(figsize=[30, 20])\n",
+    "explode = (0, 0, 0, 0, 0, 0, 0.1, 0.1, 0.1, 0.1, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, \n",
+    "           0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2, 0.2)\n",
+    "twitter_df['lang'].value_counts().plot(kind='pie', explode=explode)\n",
+    "plt.legend(labels=twitter_df['lang'])\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -277,12 +279,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df['author_gender'].value_counts()"
+    "plt.figure(figsize=[5, 5])\n",
+    "twitter_df['author_gender'].value_counts().plot(kind='pie')\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -295,12 +298,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df['sentiment'].value_counts()"
+    "plt.figure(figsize=[10, 5])\n",
+    "explode = (0, 0.2, 0.4)\n",
+    "twitter_df['sentiment'].value_counts().plot(kind='pie', explode=explode)\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -315,12 +320,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df['source_spam_probability'].value_counts()"
+    "plt.figure(figsize=[8, 5])\n",
+    "twitter_df['source_spam_probability'].value_counts().plot(kind='pie')\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -333,12 +339,14 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df[twitter_df.lang.isin(['de', 'fr', 'en'])]['source_location'].value_counts()"
+    "plt.figure(figsize=[20, 10])\n",
+    "twitter_df[twitter_df.lang.isin(['de', 'fr', 'en'])]['source_location'].value_counts().plot(kind='pie')\n",
+    "plt.legend(labels=twitter_df[twitter_df.lang.isin(['de', 'fr', 'en'])]['source_location'])\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -355,9 +363,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "twitter_df.count()"
@@ -375,12 +381,13 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
-    "twitter_df[~(twitter_df.sentiment.isin(['POSITIVE', 'NEGATIVE', 'NEUTRAL']))]['lang'].value_counts()"
+    "plt.figure(figsize=[6, 5])\n",
+    "twitter_df[~(twitter_df.sentiment.isin(['POSITIVE', 'NEGATIVE', 'NEUTRAL']))]['lang'].value_counts().plot(kind='pie')\n",
+    "plt.axis('equal')\n",
+    "plt.show()"
    ]
   },
   {
@@ -402,9 +409,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', -1)\n",
@@ -422,7 +427,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -451,9 +455,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "pd.set_option('display.max_colwidth', 100)\n",
@@ -470,9 +472,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'therapie' in x) ]['main']"
@@ -488,9 +488,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "twitter_df[twitter_df['main'].map(lambda x: 'RT ' in x) ]['main'].head()"
@@ -716,9 +714,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cleaned['published'] = pd.to_datetime(cleaned['published'])\n",
@@ -761,7 +757,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -780,9 +775,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "url_mask = cleaned['main'].str.contains(\"www\\S+\") | cleaned['main'].str.contains(\"http\\S+\")\n",
@@ -820,9 +813,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cleaned['main'] = cleaned['main'].str.replace(r'[^\\w\\s]', '')\n",
@@ -869,9 +860,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "cleaned['tweets'] = cleaned['main'] #keep tweets for later\n",
@@ -918,9 +907,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "remove_stops('english', cleaned, 'main')\n",
@@ -946,9 +933,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "def stem_words(language, df, *col):\n",
@@ -968,9 +953,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "stem_words('english', cleaned, 'main')\n",
@@ -1013,7 +996,6 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "collapsed": false,
     "scrolled": true
    },
    "outputs": [],
@@ -1075,9 +1057,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "remove_stops('english', en_dict)\n",
@@ -1108,9 +1088,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "en_dict.head()"
@@ -1119,9 +1097,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "fr_dict.head()"
@@ -1130,9 +1106,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "de_dict.head()"
@@ -1202,9 +1176,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "english_filtered = cleaned[cleaned.lang == 'en']['tweets']\\\n",
@@ -1215,9 +1187,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "english_filtered.count()"
@@ -1241,9 +1211,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "french_filtered = cleaned[cleaned.lang == 'fr']['tweets']\\\n",
@@ -1254,9 +1222,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "french_filtered.count()"
@@ -1272,9 +1238,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "german_filtered = cleaned[cleaned.lang == 'de']['tweets']\\\n",
@@ -1285,9 +1249,7 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "collapsed": false
-   },
+   "metadata": {},
    "outputs": [],
    "source": [
     "german_filtered.count()"
@@ -1483,7 +1445,7 @@
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -1497,7 +1459,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.6.2"
   }
  },
  "nbformat": 4,
