Adding 'TRUE PATH'

--- a/project/project.ipynb
+++ b/project/project.ipynb
@@ -194,6 +194,7 @@
    "outputs": [],
    "source": [
     "EXAMPLE_PATH = 'swiss-tweet/example.json'\n",
+    "TRUE_PATH = 'reduced_tweets.json'\n",
     "\n",
     "with open(EXAMPLE_PATH) as data_file:    \n",
     "    data = json.load(data_file)\n",
